Add build support for Fedora, get linker flags from pkg-config